# squeeze

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  concepts.h  main.cpp  nilencoder.h  squeeze.h
.github/workflows/: build_and_test.yml
cmake/: Conan.cmake  Git.cmake
example/: CMakeLists.txt  main.cpp
include/squeeze/: concepts.h  huffmanencoder.h  nilencoder.h  squeeze.h
include/squeeze/lib/: bit_stream.h  list.h  priority_queue.h
test/: CMakeLists.txt
test/constexpr/: CMakeLists.txt  constexpr_map_huffmanencoder_tests.cpp  constexpr_map_nilencoder_tests.cpp  constexpr_table_huffmanencoder_tests.cpp  constexpr_table_nilencoder_tests.cpp
test/runtime/: CMakeLists.txt  lib_bit_stream_tests.cpp  lib_list_tests.cpp  lib_priority_queue_tests.cpp  map_huffmanencoder_tests.cpp  map_nilencoder_tests.cpp  table_huffmanencoder_tests.cpp  table_nilencoder_tests.cpp
